--- a/GreenBowlFoodsSystem/Views/Home/Index.cshtml
+++ b/GreenBowlFoodsSystem/Views/Home/Index.cshtml
@@ -60,8 +60,8 @@
                             </div>
 
                             <div class="mb-2">
-                                <small class="text-success fw-bold d-block" style="font-size: 0.7rem;">REVENUE (INVOICED)</small>
-                                <h4 class="fw-bold text-success mb-0">@Model.TotalRevenue.ToString("C0", ukCulture)</h4>
+                                <small class="text-info fw-bold d-block" style="font-size: 0.7rem;">REVENUE (INVOICED)</small>
+                                <h4 class="text-info fw-bold mb-0">@Model.TotalRevenue.ToString("C0", ukCulture)</h4>
                             </div>
 
                             <div>
